--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets"/>
+    <link rel="stylesheet" href="style.css">
     <title>dom project</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Counter using HTML</h1>
+        <p id="para" style="border-bottom: 1px solid white;width: 200px;">your current count is:0</p>
+        <p id="error"></p>
+        <div class="buttons">
+            <button id="dec">decrement</button>
+            <button id="inc">increment</button>
+            <button id="clr">clear</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
